Update 4.2 Secure Network Component.md

--- a/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
+++ b/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
@@ -193,3 +193,66 @@ When selecting and installing network cabling, there are several important facto
 
 - **Fiber Optic Cabling**: fiber optic cables are also a critical part of modern networking. Fiber optics use light instead of electrical signals to transmit data, offering much higher speeds and longer distances than copper cables. Fiber is especially important in backbone connections and for very high-speed networks. Fiber optic cabling is becoming more common in businesses and data centers, but it requires more specialized knowledge and equipment.
 
+### Open Questions ###
+
+1. How has Ethernet evolved over the years, and what speeds does it support today?
+<details>
+  <summary>Show answer</summary>
+Ethernet has evolved from supporting just a few megabits per second in the 1970s to modern implementations reaching up to 100 Gbps. This progression reflects the growing demand for faster and more reliable data transmission in business and personal networks.
+</details>
+
+2. Why is the choice of network cabling critical to Ethernet network performance?
+<details>
+  <summary>Show answer</summary>
+The type of cable used can greatly affect speed, signal integrity, and susceptibility to interference. Proper cabling ensures optimal data transmission and reduces the risk of network slowdowns or outages.
+</details>
+
+3. What are the key differences between coaxial cables and twisted pair cables?
+<details>
+  <summary>Show answer</summary>
+Coaxial cables have a central conductor and strong shielding, offering resistance to interference but limited bandwidth. Twisted pair cables, especially Cat5e or Cat6, are more flexible, cost-effective, and support higher speeds, making them the standard for modern Ethernet networks.
+</details>
+
+4. How do baseband and broadband transmissions differ in data communication?
+<details>
+  <summary>Show answer</summary>
+Baseband uses the entire bandwidth of a cable to transmit a single signal at a time, ideal for simple, direct communication. Broadband transmits multiple signals simultaneously on different frequencies, supporting more users and services over the same cable.
+</details>
+
+5. What are the advantages and disadvantages of UTP and STP cables?
+<details>
+  <summary>Show answer</summary>
+UTP cables are affordable and widely used but are more prone to interference. STP cables offer better protection against EMI due to their shielding but are costlier and harder to install.
+</details>
+
+6. Why is cable length important in network installation, and how is signal loss managed?
+<details>
+  <summary>Show answer</summary>
+Longer cable runs can lead to signal degradation, reducing network reliability and speed. To maintain signal quality, Ethernet cables are typically limited to 100 meters, with switches or repeaters used to extend distances when needed.
+</details>
+
+7. How should environmental factors influence your choice of network cabling?
+<details>
+  <summary>Show answer</summary>
+Environmental factors such as temperature, moisture, and electromagnetic interference can degrade cable performance. Shielded or industrial-grade cables may be necessary in harsh environments to ensure consistent and safe data transmission.
+</details>
+
+8. What considerations are important for future-proofing a network cabling installation?
+<details>
+  <summary>Show answer</summary>
+Choosing higher-grade cables like Cat6a during installation can help accommodate future bandwidth needs. This avoids costly upgrades later as network demands increase over time.
+</details>
+
+9. Why is cable management essential in network infrastructure?
+<details>
+  <summary>Show answer</summary>
+Organized cabling improves airflow, reduces hardware strain, and simplifies troubleshooting. Using cable trays, labels, and proper routing prevents tangling and damage, saving time and money in the long run.
+</details>
+
+10. In what situations might fiber optic cabling be a better choice than copper cables?
+<details>
+  <summary>Show answer</summary>
+Fiber optics are ideal for high-speed, long-distance connections, such as backbone networks or data centers. They offer immunity to EMI and much greater bandwidth than copper, though they require more expertise to install and maintain.
+</details>
+
+---
